# MCM

./: .gitignore  README.md
main/: problem.md
q1/: CMakeLists.txt  question.md
q1/data/: medmap  recipe
q1/src/: main.cpp  medicine.hpp  tsp.cpp  tsp.hpp
q2/: CMakeLists.txt  question.md
q2/data/: dist.txt  freq.txt  letter_freq.txt  letters.txt  maxn.txt  newn.txt  word_refined.txt
q2/src/: dp.cpp  main.cpp  utility.hpp
q3/: CMakeLists.txt  question.md
q3/data/: initn.txt  lenfreq.txt  res.txt
q3/src/: SimuAneal.cpp  SimuAneal.hpp  main.cpp  solution.cpp  solution.hpp  utility.hpp
q4/: question.md
